# ollive-ai-assessment

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/evals/: __init__.py  evaluator.py
app/guardrails/: __init__.py  safety_filter.py
app/memory/: __init__.py  conversation_memory.py
app/models/: __init__.py  base_assistant.py  hosted_assistant.py  oss_assistant.py
app/observability/: __init__.py  tracker.py
app/services/: __init__.py  assistant_service.py  tool_service.py
app/ui/: __init__.py  components.py
app/utils/: __init__.py  config.py  logger.py
data/eval_datasets/: adversarial_prompts.json  bias_prompts.json  factual_prompts.json
deployment/: hf_spaces_README.md  streamlit_cloud.md
reports/: evaluation_report.html  generate_report.py
scripts/: run_evals.py
tests/: test_config.py  test_guardrails.py  test_memory.py
